# pytest-test

./: README.md  pyproject.toml
myproject/: a.py  b.py  c.py  d.py
tests/: test.py
